# allegro2Dgame

./: .gitignore  CMakeLists.txt  README.md  scores - 複製.txt  scores.txt
include/: define.h  myheader.h  structure.h
src/: audio.c  initialize.c  leng_fileInit.c  liu_score.c  main.c  menu.c  monster.c  multiplay.c  object.c  player.c  release.c  text.c  world_generate.c  ying_Map.c  ying_MenuResoultiot.c  ying_cameraSystem.c  ying_joystick.c
